--- a/KoKoAlarm/res/values/strings.xml
+++ b/KoKoAlarm/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World, KoKoAlarmActivity!</string>
-    <string name="app_name">KoKoAlarm</string>
+    <string name="app_name">꼬꼬알람</string>
 
 </resources>
